fixed bar alignment to Sway windows and top bezzel

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -24,6 +24,7 @@
 .modules-center,
 .modules-right {
   margin: 4px;
+  margin-bottom: 0;
   border-radius: 20px;
   background-color: @base;
 }
